# AMP-SampleAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  openapi.yaml  pyproject.toml
app/: agent.py  api.py  azure_client.py  config.py  main.py  models.py  stub_calculator.py
